# tik

./: CHANGELOG.md  Cargo.toml  README.md
docs/plans/: 2026-03-03-todo-implementation.md
src/: main.rs  session.rs  timer.rs  todo.rs
